[gd_scene load_steps=7 format=2]

[ext_resource path="res://CardFace.gd" type="Script" id=1]
[ext_resource path="res://blank_icon.png" type="Texture" id=2]
[ext_resource path="res://plus0_card.png" type="Texture" id=3]
[ext_resource path="res://rolling.png" type="Texture" id=4]
[ext_resource path="res://air.png" type="Texture" id=5]
[ext_resource path="res://wh_brain.png" type="Texture" id=6]

[node name="CardFace" type="Control"]
mouse_filter = 1
script = ExtResource( 1 )

[node name="CardMain" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardLeft" type="TextureRect" parent="."]
anchor_left = 0.019
anchor_top = 0.336
anchor_right = 0.241
anchor_bottom = 0.664
texture = ExtResource( 5 )
expand = true
stretch_mode = 1

[node name="CardRight" type="TextureRect" parent="."]
anchor_left = 0.759
anchor_top = 0.336
anchor_right = 0.981
anchor_bottom = 0.664
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardBlank" type="TextureRect" parent="."]
anchor_left = 0.09
anchor_top = 0.73
anchor_right = 0.18
anchor_bottom = 0.864
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="CardSymbol" type="TextureRect" parent="."]
anchor_left = 0.103
anchor_top = 0.749
anchor_right = 0.167
anchor_bottom = 0.845
texture = ExtResource( 6 )
expand = true
stretch_mode = 1
